# Eye_Gaze_Analysis

./: .gitignore  README.md  analyze_gaze_csv.py  app.py  dashboard_aoi.py  dashboard_charts.py  environment.yml  extract_dot.py  eyegaze.cmd  inspect_fixations.py  make_aggregate_figure.py  make_figures.py  pipeline_config.py  pipeline_runner.py  pyproject.toml  requirements.txt  setup_run.ps1  summarize_fixations.py  usability_measure.py  viz_utils.py  window_analysis.py  window_utils.py
.streamlit/: config.toml
aoi/: aoi_definitions.json
core/: analyze_gaze_csv.py  app.py  extract_dot.py  gaze_detection.py  inspect_fixations.py  make_aggregate_figure.py  make_figures.py  pipeline_runner.py  summarize_fixations.py  usability_measure.py  window_analysis.py
eyegaze/: __init__.py  __main__.py  cli.py
tests/: test_dashboard_aoi.py  test_eyegaze_cli.py  test_gaze_detection.py  test_pipeline_runner.py  test_usability_measure.py  test_window_utils.py
