[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eye-gaze-analysis"
version = "0.1.0"
description = "Video-based gaze analysis from eye-tracking overlays"
readme = "README.md"
requires-python = ">=3.9"

# Runtime dependencies are listed in requirements.txt (flat script layout).

[project.optional-dependencies]
export = [
    "plotly>=5.18,<6",
    "kaleido>=0.2.1,<1",
]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
eyegaze = "eyegaze.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eyegaze*"]
